combine compressed, weighted, mutation 70%

--- a/coursework.ipynb
+++ b/coursework.ipynb
@@ -211,6 +211,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Custom mutation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_cell_neighbours(individual, cell):\n",
+    "    neighbours = []\n",
+    "    row = cell // 50\n",
+    "    col = cell % 50\n",
+    "\n",
+    "    for row_change in [-1, 0, 1]:\n",
+    "        for col_change in [-1, 0, 1]:\n",
+    "            neighbour_row = row + row_change\n",
+    "            neighbour_col = col + col_change\n",
+    "\n",
+    "            if 0 <= neighbour_row < 50 and 0 <= neighbour_col < 50:\n",
+    "                neighbour_index = neighbour_row * 50 + neighbour_col\n",
+    "                if individual[neighbour_index] == 1:\n",
+    "                    neighbours.append(neighbour_index)\n",
+    "\n",
+    "    return neighbours\n",
+    "\n",
+    "def remove_neighbouring_cameras(individual, neighbours: list):\n",
+    "    if neighbours:\n",
+    "        to_keep = random.choice(neighbours)\n",
+    "        neighbours.remove(to_keep)\n",
+    "        for cell in neighbours:\n",
+    "            if random.random() < 0.7:\n",
+    "                individual[cell] = 0\n",
+    "\n",
+    "\n",
+    "def neighbourhood_mutation(individual):\n",
+    "    for cell in range(len(individual)):\n",
+    "        if individual[cell] == 1:\n",
+    "            neighbours = get_cell_neighbours(individual, cell)\n",
+    "            remove_neighbouring_cameras(individual, neighbours)\n",
+    "\n",
+    "    return individual,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Evaluation function"
    ]
   },
@@ -244,13 +292,13 @@
     "\n",
     "    total_cameras = np.sum(solution)\n",
     "\n",
-    "    not_covered_penalty_factor = 15000\n",
-    "\n",
     "    # only call this if the solution is not invalid\n",
     "    coverage = objective_function(solution, instance_size, total_cameras, instance_file)\n",
     "\n",
-    "    if coverage < 0.99:\n",
-    "        fitness = not_covered_penalty_factor  \n",
+    "    if coverage < 0.99: \n",
+    "        uncovered = (1 - coverage) * 100\n",
+    "        penalty = uncovered * uncovered * 2\n",
+    "        fitness = total_cameras + penalty  \n",
     "    else:\n",
     "        fitness = total_cameras \n",
     "\n",
@@ -266,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +345,7 @@
     "# register all operators we need with the toolbox\n",
     "toolbox.register(\"evaluate\", eval_function)\n",
     "toolbox.register(\"mate\", tools.cxTwoPoint)\n",
-    "toolbox.register(\"mutate\", tools.mutFlipBit, indpb=0.05)\n",
+    "toolbox.register(\"mutate\", neighbourhood_mutation)\n",
     "toolbox.register(\"select\", tools.selTournament, tournsize=2)"
    ]
   },
