prepare for testing

--- a/coursework.ipynb
+++ b/coursework.ipynb
@@ -332,12 +332,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Hill climber"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_all_camera_positions(solution):\n",
+    "    return [i for i, value in enumerate(solution) if value == 1]\n",
+    "\n",
+    "# delete a random camera\n",
+    "def generate_neighbouring_solution(solution):\n",
+    "    new_solution = solution.copy()\n",
+    "    all_cameras = get_all_camera_positions(new_solution)\n",
+    "    random.shuffle(all_cameras)\n",
+    "    chosen = random.choice(all_cameras)\n",
+    "    new_solution[chosen] = 0\n",
+    "\n",
+    "    return new_solution\n",
+    "    \n",
+    "\n",
+    "def hill_climber(solution):\n",
+    "    best_solution = solution\n",
+    "    min_num_cameras = np.sum(solution)\n",
+    "    initial_min_cameras = min_num_cameras\n",
+    "\n",
+    "    # set the maximum number of tries\n",
+    "    max_tries = 100\n",
+    "    \n",
+    "    # now run the HC loop : \n",
+    "    for i in range(max_tries-1):\n",
+    "        new_solution = generate_neighbouring_solution(best_solution)\n",
+    "        new_camera_num = np.sum(new_solution)\n",
+    "        converted_solution = convert_compressed_to_full(new_solution)\n",
+    "        new_solution_coverage = objective_function(converted_solution, instance_size, new_camera_num, instance_file) # fill this in properly\n",
+    "        print(f\"{i} Generated cameras: {new_camera_num}, coverage: {new_solution_coverage}\")\n",
+    "        \n",
+    "        if new_solution_coverage < 0.99:\n",
+    "            continue\n",
+    "\n",
+    "        else:\n",
+    "            print(\"accepted new\")\n",
+    "            min_num_cameras = new_camera_num\n",
+    "            best_solution = new_solution.copy()\n",
+    "\n",
+    "        \n",
+    "    print(\"Starting camera number %s Best found %s improvement of %s\" % (initial_min_cameras, min_num_cameras, initial_min_cameras-min_num_cameras))  \n",
+    "   \n",
+    "    # return the results\n",
+    "    return best_solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Run the EA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -401,8 +459,7 @@
     }
    ],
    "source": [
-    "runs = [[\"Best\", \"Generation\", \"Time\"]]\n",
-    "for run in range(0, 1):\n",
+    "for run in range(0, 10):\n",
     "    start = time.time()\n",
     "    pop, log, hof = main()\n",
     "    stop = time.time()\n",
@@ -417,199 +474,16 @@
     "    for i in range(generations):  # set to ngen\n",
     "            fit = min[i]\n",
     "            if fit == best:\n",
-    "                break        \n",
+    "                break  \n",
+    "    \n",
+    "    print(\"min fitness found is %s at generation %s\" % (best, i))\n",
     "\n",
-    "    runs.append([best, i, run_time])  \n",
+    "    best_after_hc = hill_climber(hof[0])\n",
+    "    hc_best_cameras = np.sum(best_after_hc)\n",
     "\n",
     "    with open(\"output.csv\", mode = \"a\", newline=\"\") as file:\n",
     "        writer = csv.writer(file)\n",
-    "        writer.writerow([best,i, run_time])      \n",
-    "    \n",
-    "    print(\"min fitness found is %s at generation %s\" % (best, i))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Hill climber"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 Generated cameras: 41, coverage: 0.991299\n",
-      "accepted new\n",
-      "1 Generated cameras: 40, coverage: 0.991299\n",
-      "accepted new\n",
-      "2 Generated cameras: 39, coverage: 0.991194\n",
-      "accepted new\n",
-      "3 Generated cameras: 38, coverage: 0.977461\n",
-      "4 Generated cameras: 38, coverage: 0.964357\n",
-      "5 Generated cameras: 38, coverage: 0.990565\n",
-      "accepted new\n",
-      "6 Generated cameras: 37, coverage: 0.989831\n",
-      "7 Generated cameras: 37, coverage: 0.990565\n",
-      "accepted new\n",
-      "8 Generated cameras: 36, coverage: 0.98742\n",
-      "9 Generated cameras: 36, coverage: 0.990565\n",
-      "accepted new\n",
-      "10 Generated cameras: 35, coverage: 0.990565\n",
-      "accepted new\n",
-      "11 Generated cameras: 34, coverage: 0.92777\n",
-      "12 Generated cameras: 34, coverage: 0.95597\n",
-      "13 Generated cameras: 34, coverage: 0.990251\n",
-      "accepted new\n",
-      "14 Generated cameras: 33, coverage: 0.979453\n",
-      "15 Generated cameras: 33, coverage: 0.988888\n",
-      "16 Generated cameras: 33, coverage: 0.989097\n",
-      "17 Generated cameras: 33, coverage: 0.979453\n",
-      "18 Generated cameras: 33, coverage: 0.990251\n",
-      "accepted new\n",
-      "19 Generated cameras: 32, coverage: 0.932173\n",
-      "20 Generated cameras: 32, coverage: 0.990251\n",
-      "accepted new\n",
-      "21 Generated cameras: 31, coverage: 0.987315\n",
-      "22 Generated cameras: 31, coverage: 0.957228\n",
-      "23 Generated cameras: 31, coverage: 0.989097\n",
-      "24 Generated cameras: 31, coverage: 0.957228\n",
-      "25 Generated cameras: 31, coverage: 0.990251\n",
-      "accepted new\n",
-      "26 Generated cameras: 30, coverage: 0.955656\n",
-      "27 Generated cameras: 30, coverage: 0.961317\n",
-      "28 Generated cameras: 30, coverage: 0.986896\n",
-      "29 Generated cameras: 30, coverage: 0.988993\n",
-      "30 Generated cameras: 30, coverage: 0.986896\n",
-      "31 Generated cameras: 30, coverage: 0.955656\n",
-      "32 Generated cameras: 30, coverage: 0.968865\n",
-      "33 Generated cameras: 30, coverage: 0.990251\n",
-      "accepted new\n",
-      "34 Generated cameras: 29, coverage: 0.987315\n",
-      "35 Generated cameras: 29, coverage: 0.988364\n",
-      "36 Generated cameras: 29, coverage: 0.961317\n",
-      "37 Generated cameras: 29, coverage: 0.988364\n",
-      "38 Generated cameras: 29, coverage: 0.980082\n",
-      "39 Generated cameras: 29, coverage: 0.980082\n",
-      "40 Generated cameras: 29, coverage: 0.968865\n",
-      "41 Generated cameras: 29, coverage: 0.947584\n",
-      "42 Generated cameras: 29, coverage: 0.987944\n",
-      "43 Generated cameras: 29, coverage: 0.968865\n",
-      "44 Generated cameras: 29, coverage: 0.947584\n",
-      "45 Generated cameras: 29, coverage: 0.955656\n",
-      "46 Generated cameras: 29, coverage: 0.98417\n",
-      "47 Generated cameras: 29, coverage: 0.986162\n",
-      "48 Generated cameras: 29, coverage: 0.979453\n",
-      "49 Generated cameras: 29, coverage: 0.987106\n",
-      "50 Generated cameras: 29, coverage: 0.988993\n",
-      "51 Generated cameras: 29, coverage: 0.963413\n",
-      "52 Generated cameras: 29, coverage: 0.987944\n",
-      "53 Generated cameras: 29, coverage: 0.955656\n",
-      "54 Generated cameras: 29, coverage: 0.955656\n",
-      "55 Generated cameras: 29, coverage: 0.955656\n",
-      "56 Generated cameras: 29, coverage: 0.979453\n",
-      "57 Generated cameras: 29, coverage: 0.988993\n",
-      "58 Generated cameras: 29, coverage: 0.989097\n",
-      "59 Generated cameras: 29, coverage: 0.932173\n",
-      "60 Generated cameras: 29, coverage: 0.98417\n",
-      "61 Generated cameras: 29, coverage: 0.989097\n",
-      "62 Generated cameras: 29, coverage: 0.986162\n",
-      "63 Generated cameras: 29, coverage: 0.990251\n",
-      "accepted new\n",
-      "64 Generated cameras: 28, coverage: 0.988888\n",
-      "65 Generated cameras: 28, coverage: 0.988888\n",
-      "66 Generated cameras: 28, coverage: 0.990251\n",
-      "accepted new\n",
-      "67 Generated cameras: 27, coverage: 0.957962\n",
-      "68 Generated cameras: 27, coverage: 0.987315\n",
-      "69 Generated cameras: 27, coverage: 0.988993\n",
-      "70 Generated cameras: 27, coverage: 0.986896\n",
-      "71 Generated cameras: 27, coverage: 0.990251\n",
-      "accepted new\n",
-      "72 Generated cameras: 26, coverage: 0.990251\n",
-      "accepted new\n",
-      "73 Generated cameras: 25, coverage: 0.983541\n",
-      "74 Generated cameras: 25, coverage: 0.986896\n",
-      "75 Generated cameras: 25, coverage: 0.987315\n",
-      "76 Generated cameras: 25, coverage: 0.986896\n",
-      "77 Generated cameras: 25, coverage: 0.987106\n",
-      "78 Generated cameras: 25, coverage: 0.98417\n",
-      "79 Generated cameras: 25, coverage: 0.961317\n",
-      "80 Generated cameras: 25, coverage: 0.957962\n",
-      "81 Generated cameras: 25, coverage: 0.986896\n",
-      "82 Generated cameras: 25, coverage: 0.963413\n",
-      "83 Generated cameras: 25, coverage: 0.961317\n",
-      "84 Generated cameras: 25, coverage: 0.988993\n",
-      "85 Generated cameras: 25, coverage: 0.961107\n",
-      "86 Generated cameras: 25, coverage: 0.988993\n",
-      "87 Generated cameras: 25, coverage: 0.968865\n",
-      "88 Generated cameras: 25, coverage: 0.961107\n",
-      "89 Generated cameras: 25, coverage: 0.988888\n",
-      "90 Generated cameras: 25, coverage: 0.987735\n",
-      "91 Generated cameras: 25, coverage: 0.979453\n",
-      "92 Generated cameras: 25, coverage: 0.927456\n",
-      "93 Generated cameras: 25, coverage: 0.989097\n",
-      "94 Generated cameras: 25, coverage: 0.955656\n",
-      "95 Generated cameras: 25, coverage: 0.963413\n",
-      "96 Generated cameras: 25, coverage: 0.932173\n",
-      "97 Generated cameras: 25, coverage: 0.957228\n",
-      "98 Generated cameras: 25, coverage: 0.932173\n",
-      "Starting camera number 42 Best found 26 improvement of 16\n"
-     ]
-    }
-   ],
-   "source": [
-    "def get_all_camera_positions(solution):\n",
-    "    return [i for i, value in enumerate(solution) if value == 1]\n",
-    "\n",
-    "# delete a random camera\n",
-    "def generate_neighbouring_solution(solution):\n",
-    "    new_solution = solution.copy()\n",
-    "    all_cameras = get_all_camera_positions(new_solution)\n",
-    "    random.shuffle(all_cameras)\n",
-    "    chosen = random.choice(all_cameras)\n",
-    "    new_solution[chosen] = 0\n",
-    "\n",
-    "    return new_solution\n",
-    "    \n",
-    "\n",
-    "def hill_climber(solution):\n",
-    "    best_solution = solution\n",
-    "    min_num_cameras = np.sum(solution)\n",
-    "    initial_min_cameras = min_num_cameras\n",
-    "\n",
-    "    # set the maximum number of tries\n",
-    "    max_tries = 100\n",
-    "    \n",
-    "    # now run the HC loop : \n",
-    "    for i in range(max_tries-1):\n",
-    "        new_solution = generate_neighbouring_solution(best_solution)\n",
-    "        new_camera_num = np.sum(new_solution)\n",
-    "        converted_solution = convert_compressed_to_full(new_solution)\n",
-    "        new_solution_coverage = objective_function(converted_solution, instance_size, new_camera_num, instance_file) # fill this in properly\n",
-    "        print(f\"{i} Generated cameras: {new_camera_num}, coverage: {new_solution_coverage}\")\n",
-    "        \n",
-    "        if new_solution_coverage < 0.99:\n",
-    "            continue\n",
-    "\n",
-    "        else:\n",
-    "            print(\"accepted new\")\n",
-    "            min_num_cameras = new_camera_num\n",
-    "            best_solution = new_solution.copy()\n",
-    "\n",
-    "        \n",
-    "    print(\"Starting camera number %s Best found %s improvement of %s\" % (initial_min_cameras, min_num_cameras, initial_min_cameras-min_num_cameras))  \n",
-    "   \n",
-    "    # return the results\n",
-    "    return best_solution\n",
-    "\n",
-    "best_solution_hc = hill_climber(hof[0])"
+    "        writer.writerow([best, i, best_after_hc, run_time])"
    ]
   },
   {
@@ -621,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +602,7 @@
     "\n",
     "# visualise the hill climber output\n",
     "print(\"Hill climber output\")\n",
-    "final_solution_hc = best_solution_hc\n",
+    "final_solution_hc = best_after_hc\n",
     "final_solution_hc = convert_compressed_to_full(final_solution_hc)\n",
     "actual_cameras_hc=sum(final_solution_hc)  # need to pass the actual numbers of cameras in the solution, regardless of whether it is valid\n",
     "print(actual_cameras_hc)\n",
