prepare for comparison tests

--- a/coursework.ipynb
+++ b/coursework.ipynb
@@ -332,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hill climber"
+    "## Basic Hill climber"
    ]
   },
   {
@@ -384,6 +384,78 @@
     "   \n",
     "    # return the results\n",
     "    return best_solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Steepest-Ascent hill climber"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_valid_neighbours(solution):\n",
+    "    valid_neighbours = []\n",
+    "    all_cameras = get_all_camera_positions(solution)\n",
+    "    for cam in all_cameras:\n",
+    "        neighbour = solution.copy()\n",
+    "        neighbour[cam] = 0\n",
+    "        converted = convert_compressed_to_full(neighbour)\n",
+    "        cams = np.sum(neighbour)\n",
+    "        coverage = objective_function(converted, instance_size, cams, instance_file)\n",
+    "        if coverage > 0.99:\n",
+    "            valid_neighbours.append((cam, coverage))\n",
+    "\n",
+    "    print(valid_neighbours)\n",
+    "\n",
+    "    return valid_neighbours\n",
+    "\n",
+    "\n",
+    "def pick_a_neighbour(neighbours):\n",
+    "    sorted_neighbours = sorted(neighbours, key=lambda x: x[1], reverse=True)\n",
+    "    best_neighbour = sorted_neighbours[0]\n",
+    "    highest_items = [item for item in sorted_neighbours if item[1] == best_neighbour[1]]\n",
+    "    \n",
+    "    return random.choice(highest_items)\n",
+    "\n",
+    "\n",
+    "def steepest_ascent_hill_climber(solution):\n",
+    "    best_solution = solution\n",
+    "    min_num_cameras = np.sum(solution)\n",
+    "    initial_min_cameras = min_num_cameras\n",
+    "\n",
+    "    # set the maximum number of tries\n",
+    "    max_tries = 100\n",
+    "    \n",
+    "    # now run the HC loop : \n",
+    "    for i in range(max_tries-1):\n",
+    "        valid_neighbours = generate_valid_neighbours(best_solution)\n",
+    "        if len(valid_neighbours) <= 0:\n",
+    "            break\n",
+    "        \n",
+    "        chosen_neighbour = pick_a_neighbour(valid_neighbours)\n",
+    "        \n",
+    "        new_solution = best_solution.copy()\n",
+    "        new_solution[chosen_neighbour[0]] = 0\n",
+    "        new_coverage = chosen_neighbour[1]\n",
+    "        new_cameras = np.sum(new_solution)\n",
+    "\n",
+    "        print(f\"{i} Generated cameras: {new_cameras}, coverage: {new_coverage}\")\n",
+    "        \n",
+    "        if new_coverage > 0.99:\n",
+    "            print(\"accepted new\")\n",
+    "            min_num_cameras = new_cameras\n",
+    "            best_solution = new_solution.copy()\n",
+    "\n",
+    "    print(\"Starting camera number %s Best found %s improvement of %s\" % (initial_min_cameras, min_num_cameras, initial_min_cameras-min_num_cameras))  \n",
+    "   \n",
+    "    # return the results\n",
+    "    return best_solution\n"
    ]
   },
   {
@@ -478,12 +550,29 @@
     "    \n",
     "    print(\"min fitness found is %s at generation %s\" % (best, i))\n",
     "\n",
+    "    start = time.time()\n",
     "    best_after_hc = hill_climber(hof[0])\n",
+    "    stop = time.time()\n",
+    "    timeHC = stop - start\n",
+    "\n",
     "    hc_best_cameras = np.sum(best_after_hc)\n",
+    "\n",
+    "    start = time.time()\n",
+    "    best_after_sa_hc = steepest_ascent_hill_climber(hof[0])\n",
+    "    stop = time.time()\n",
+    "    sahc_best_cameras = np.sum(best_after_sa_hc)\n",
+    "    timeSAHC = stop - start\n",
+    "\n",
+    "    print(\"coverage HC: \" + str(objective_function(best_after_hc, instance_size, hc_best_cameras, instance_file)))\n",
+    "    print(\"coverage SAHC: \" + str(objective_function(best_after_sa_hc, instance_size, sahc_best_cameras, instance_file)))\n",
+    "\n",
+    "    os.makedirs(\"outputs\", exist_ok=True)\n",
+    "    with open(\"outputs/run1.txt\", mode=\"w\") as txt:\n",
+    "         txt.write(hof[0])\n",
     "\n",
     "    with open(\"output.csv\", mode = \"a\", newline=\"\") as file:\n",
     "        writer = csv.writer(file)\n",
-    "        writer.writerow([best, i, best_after_hc, run_time])"
+    "        writer.writerow([best, i, hc_best_cameras, sahc_best_cameras, run_time, timeHC, timeSAHC])"
    ]
   },
   {
@@ -612,7 +701,21 @@
     "print(cameras_on_walls_hc)\n",
     "print(final_solution_hc)\n",
     "\n",
-    "visualise_objective_function(final_solution_hc, instance_size=instance_size, nb_cameras=actual_cameras_hc, instance_file=myinst)\n"
+    "visualise_objective_function(final_solution_hc, instance_size=instance_size, nb_cameras=actual_cameras_hc, instance_file=myinst)\n",
+    "\n",
+    "# visualise the SA hill climber output\n",
+    "print(\"SA Hill climber output\")\n",
+    "final_solution_hc2 = best_after_sa_hc\n",
+    "final_solution_hc2 = convert_compressed_to_full(final_solution_hc2)\n",
+    "actual_cameras_hc2=sum(final_solution_hc2)  # need to pass the actual numbers of cameras in the solution, regardless of whether it is valid\n",
+    "print(actual_cameras_hc2)\n",
+    "coverage_hc2 = objective_function(final_solution_hc2, instance_size, actual_cameras_hc2, instance_file)\n",
+    "print(coverage_hc2)\n",
+    "cameras_on_walls_hc2 = check_walls(final_solution_hc2, instance_file) \n",
+    "print(cameras_on_walls_hc2)\n",
+    "print(final_solution_hc2)\n",
+    "\n",
+    "visualise_objective_function(final_solution_hc2, instance_size=instance_size, nb_cameras=actual_cameras_hc2, instance_file=myinst)\n"
    ]
   },
   {
