--- a/coursework.ipynb
+++ b/coursework.ipynb
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# myinst = \"./artGalleryTestInstances/pacman.csv\"\n",
-    "myinst = \"\"\n",
+    "myinst = \"./artGalleryTestInstances/rooms.csv\"\n",
+    "# myinst = \"\"\n",
     "\n",
     "instance_file = myinst\n",
     "instance_size  = 100\n",
@@ -266,10 +266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "current_generation = 0\n",
+    "generations = 50\n",
+    "\n",
     "def eval_function(individual):\n",
     "    solution = []\n",
     "    total_cameras = 99999\n",
@@ -299,12 +302,80 @@
     "\n",
     "    if coverage < 0.99: \n",
     "        uncovered = (1 - coverage) * 100\n",
-    "        penalty = uncovered * uncovered * 2\n",
-    "        fitness = total_cameras + penalty  \n",
+    "        # weighted penalty and then adapted dynamically according to the generation\n",
+    "        penalty = (uncovered * uncovered * 2) * (1 + 0.5 * (current_generation / generations))\n",
+    "        fitness = total_cameras + penalty \n",
     "    else:\n",
     "        fitness = total_cameras \n",
     "\n",
     "    return fitness,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modified EA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eaSimpleModified(population, toolbox, cxpb, mutpb, ngen, stats=None,\n",
+    "             halloffame=None, verbose=__debug__):\n",
+    "    global current_generation\n",
+    " \n",
+    "    logbook = tools.Logbook()\n",
+    "    logbook.header = ['gen', 'nevals'] + (stats.fields if stats else [])\n",
+    "\n",
+    "    # Evaluate the individuals with an invalid fitness\n",
+    "    invalid_ind = [ind for ind in population if not ind.fitness.valid]\n",
+    "    fitnesses = toolbox.map(toolbox.evaluate, invalid_ind)\n",
+    "    for ind, fit in zip(invalid_ind, fitnesses):\n",
+    "        ind.fitness.values = fit\n",
+    "\n",
+    "    current_generation = 0\n",
+    "\n",
+    "    if halloffame is not None:\n",
+    "        halloffame.update(population)\n",
+    "\n",
+    "    record = stats.compile(population) if stats else {}\n",
+    "    logbook.record(gen=0, nevals=len(invalid_ind), **record)\n",
+    "    if verbose:\n",
+    "        print(logbook.stream)\n",
+    "\n",
+    "    # Begin the generational process\n",
+    "    for gen in range(1, ngen + 1):\n",
+    "        current_generation = gen\n",
+    "        # Select the next generation individuals\n",
+    "        offspring = toolbox.select(population, len(population))\n",
+    "\n",
+    "        # Vary the pool of individuals\n",
+    "        offspring = algorithms.varAnd(offspring, toolbox, cxpb, mutpb)\n",
+    "\n",
+    "        # Evaluate the individuals with an invalid fitness\n",
+    "        invalid_ind = [ind for ind in offspring if not ind.fitness.valid]\n",
+    "        fitnesses = toolbox.map(toolbox.evaluate, invalid_ind)\n",
+    "        for ind, fit in zip(invalid_ind, fitnesses):\n",
+    "            ind.fitness.values = fit\n",
+    "\n",
+    "        # Update the hall of fame with the generated individuals\n",
+    "        if halloffame is not None:\n",
+    "            halloffame.update(offspring)\n",
+    "\n",
+    "        # Replace the current population by the offspring\n",
+    "        population[:] = offspring\n",
+    "\n",
+    "        # Append the current generation statistics to the logbook\n",
+    "        record = stats.compile(population) if stats else {}\n",
+    "        logbook.record(gen=gen, nevals=len(invalid_ind), **record)\n",
+    "        if verbose:\n",
+    "            print(logbook.stream)\n",
+    "\n",
+    "    return population, logbook\n"
    ]
   },
   {
@@ -432,12 +503,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "population = 50\n",
-    "generations = 50\n",
     "def main():\n",
     "    \n",
     "    # choose a population size: e.g. 200\n",
@@ -456,7 +526,7 @@
     "    \n",
     "    # run the algorithm: we need to tell it what parameters to use\n",
     "    # cxpb = crossover probability; mutpb = mutation probability; ngen = number of iterations\n",
-    "    pop, log = algorithms.eaSimple(pop, toolbox, cxpb=0.6, mutpb=0.05, ngen=generations, stats=stats, halloffame=hof, verbose=True)\n",
+    "    pop, log = eaSimpleModified(pop, toolbox, cxpb=0.6, mutpb=0.05, ngen=generations, stats=stats, halloffame=hof, verbose=True)\n",
     "    \n",
     "    return pop, log, hof"
    ]
