--- a/coursework.ipynb
+++ b/coursework.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
     "    # only call this if the solution is not invalid\n",
     "    coverage = objective_function(solution, instance_size, total_cameras, instance_file)\n",
     "\n",
-    "    if coverage < 0.99: \n",
+    "    if coverage <= 0.99: \n",
     "        uncovered = (1 - coverage) * 100\n",
     "        # weighted penalty and then adapted dynamically according to the generation\n",
     "        penalty = (uncovered * uncovered * 2) * (1 + 0.5 * (current_generation / generations))\n",
